# vai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: yandex-container-images.yml
apps/backend/: .env.example  Dockerfile  drizzle.config.ts  package.json
apps/backend/src/: app.test.ts  app.ts  (+4 more)
apps/cv-ocr-service/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/cv-ocr-service/scripts/: ensure_python_version.py  generate_proto.py
apps/cv-ocr-service/src/processor/adapters/: cv_layout.py  tesseract_cli.py
apps/cv-ocr-service/src/processor/application/: ocr_candidates.py  ocr_execution.py  table_reconstruction.py
apps/cv-ocr-service/src/processor/domain/: errors.py  ocr.py  structural_extraction.py  text_layer.py
apps/cv-ocr-service/src/vai_cv_ocr_service/: __main__.py  domain.py  pdf_content_operations.py  pdf_operations.py  server.py
apps/cv-ocr-service/tests/: conftest.py  test_grpc_service.py  test_pdf_operations.py
apps/web/: Dockerfile  README.md  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts
apps/worker/: .env.example  Dockerfile  package.json
deploy/yandex/: docker-compose.coi.yaml
docs/: deployment-yandex-cloud.md
docs/architecture/: domain-map.md
docs/product/: business-capabilities.md  stakeholders.md  use-cases.md  vision.md
examples/xlsx/: 03 97077 04-14-121-02 ЛС.xlsx  03 97077 04-14-121-02 РС.xlsx  03_88120_02-01-102-19 - ЛСР1.xlsx  03_88120_02-01-102-19 - РС1.xlsx
(+154 files in other folders)
