[project]
name = "vai-cv-ocr-service"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio==1.80.0",
  "grpcio-tools==1.80.0",
  "protobuf==6.33.2",
  "PyMuPDF==1.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
