[project]
name = "vai-cv-ocr-service"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio==1.80.0",
  "grpcio-tools==1.80.0",
  "numpy==1.26.4",
  "opencv-python-headless==4.11.0.86",
  "Pillow==11.2.1",
  "protobuf==6.33.2",
  "PyMuPDF==1.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
